# ModularInterpreter

./: .gitignore  CMakeLists.txt  compiler.cpp  compiler.h  compiler_types.h  language.h  main.cpp  main_compiler.cpp  main_full.cpp  main_optimizer.cpp  main_test.cpp  optimizer.cpp  optimizer.h  scope.cpp  scope.h  types.h  ve_commands.h  virtual_environment.cpp  virtual_environment.h
language_definitions/: acs.json  lua.json
